--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 			</h3>
 			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br><br><br>
 			<h1 align="center">
-				<font face="sans-serif" color="#2980b9" size="7">
+				<font face="sans-serif" color="#ffffff" size="7">
 				Finance
 				</font>
 			</h1>
 			<h3 align="center">
-				<font face="Lato" color="#050" size="5">
+				<font face="sans-serif" color="#ffffff" size="5">
 					To the moon
 				</font>
 			</h3>
 			<br />
 			<h3 align="center">
 			<a href="#">
-				<font face="Lato" color="#000">Pancakeswap</font>
+				<font face="Lato" color="#ffffff">Pancakeswap</font>
 			</a>&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="#">
-				<font face="Lato" color="#f00">Twitter</font>
+				<font face="Lato" color="#ffffff">Twitter</font>
 			</a>
 			</h3>
 		</div>
