--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			</h3>
 			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br><br><br>
 			<h1 align="center">
-				<font face="sans-serif" color="#ffffff" size="7">
-				Finance
+				<font face="sans-serif" color="#ffffff" size="10">
+				Erkunt Servet
 				</font>
 			</h1>
 			<h3 align="center">
